# arba-dirn

./: .clang-format  CMakeLists.txt  README.md  cmake_quick_install.cmake  conanfile.py
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  directions4_example.cpp  neighbor_example.cpp  neighbour_example.cpp
example/basic_cmake_project/: CMakeLists.txt  basic_cmake_project.cpp  main.cpp
include/arba/dirn/: cartographic_directions4.hpp  direction.hpp  direction4.hpp  directions.hpp  directions4.hpp  directions4_base.hpp  directions_decl.hpp  dual_direction.hpp  dual_directions.hpp  dual_directions_decl.hpp  neighborhood.hpp  neighbourhood.hpp
include/arba/dirn/d2/: cartographic_directions4.hpp  direction4.hpp  directions4.hpp  directions4_base.hpp  neighbourhood.hpp
include/arba/dirn/d2/dir4/: cartographic_directions4.hpp  direction4.hpp  directions4.hpp
include/arba/dirn/d2/dir6/: horizontal_direction6.hpp  horizontal_directions6.hpp  vertical_direction6.hpp  vertical_directions6.hpp
include/arba/dirn/d2/dir8/: cartographic_directions8.hpp  direction8.hpp  directions8.hpp
include/dirn/: directions4_base.hpp  neighbourhood.hpp
src/: dirn.cpp
test/: CMakeLists.txt  directions4_tests.cpp  directions8_tests.cpp  horizontal_directions6_tests.cpp  neighborhood_tests.cpp  neighbourhood_tests.cpp  project_version_tests.cpp  vertical_directions6_tests.cpp
test/neighborhood/: neighborhood_direction4_tests.cpp  neighborhood_direction8_tests.cpp  neighborhood_horizontal_direction6_tests.cpp  neighborhood_vertical_direction6_tests.cpp  vec2.hpp
test_package/: CMakeLists.txt  test_package.cpp
